--- a/documentation/index.html
+++ b/documentation/index.html
@@ -33,7 +33,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>A</b>LT</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Admin</b>LTE</span>
+          <span class="logo-lg"><b>LSIO-UI</b></span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -456,7 +456,7 @@ LSIO-UI/
       <span class="eg">Main Header Example</span>
       <header class="main-header" style="position: relative;">
         <!-- Logo -->
-        <a href="index2.html" class="logo" style="position: relative;"><b>Admin</b>LTE</a>
+        <a href="index2.html" class="logo" style="position: relative;"><b>LSIO-UI</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar" role="navigation" style="border: 0;max-height: 50px;">
           <!-- Sidebar toggle button-->
@@ -737,7 +737,7 @@ LSIO-UI/
         <nav class="navbar navbar-static-top">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a href="../../index2.html" class="navbar-brand"><b>Admin</b>LTE</a>
+              <a href="../../index2.html" class="navbar-brand"><b>LSIO-UI</b></a>
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                 <i class="fa fa-bars"></i>
               </button>
@@ -790,7 +790,7 @@ LSIO-UI/
   &LT;nav class="navbar navbar-static-top">
     &LT;div class="container-fluid">
     &LT;div class="navbar-header">
-      &LT;a href="../../index2.html" class="navbar-brand">&LT;b>Admin&LT;/b>LTE&LT;/a>
+      &LT;a href="../../index2.html" class="navbar-brand">&LT;b>LSIO-UI&LT;/b>LTE&LT;/a>
       &LT;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
         &LT;i class="fa fa-bars">&LT;/i>
       &LT;/button>
