--- a/public/pages/examples/invoice-print.html
+++ b/public/pages/examples/invoice-print.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Invoice</title>
+    <title>LSIO-UI 2 | Invoice</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -13,7 +13,7 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../../dist/css/lsio.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-xs-12">
             <h2 class="page-header">
-              <i class="fa fa-globe"></i> AdminLTE, Inc.
+              <i class="fa fa-globe"></i> LSIO-UI, Inc.
               <small class="pull-right">Date: 2/10/2014</small>
             </h2>
           </div><!-- /.col -->
@@ -152,7 +152,7 @@
       </section><!-- /.content -->
     </div><!-- ./wrapper -->
 
-    <!-- AdminLTE App -->
+    <!-- LSIO-UI App -->
     <script src="../../dist/js/app.min.js"></script>
   </body>
 </html>
