--- a/public/pages/forms/advanced.html
+++ b/public/pages/forms/advanced.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Advanced form elements</title>
+    <title>LSIO-UI 2 | Advanced form elements</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -23,8 +23,8 @@
     <!-- Select2 -->
     <link rel="stylesheet" href="../../plugins/select2/select2.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
+    <link rel="stylesheet" href="../../dist/css/lsio.min.css">
+    <!-- LSIO-UI Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
@@ -44,7 +44,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>A</b>LT</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Admin</b>LTE</span>
+          <span class="logo-lg"><b>LSIO-UI</b></span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -86,7 +86,7 @@
                             <img src="../../dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
-                            AdminLTE Design Team
+                            LSIO-UI Design Team
                             <small><i class="fa fa-clock-o"></i> 2 hours</small>
                           </h4>
                           <p>Why not buy a new awesome theme?</p>
@@ -990,9 +990,9 @@
     <script src="../../plugins/iCheck/icheck.min.js"></script>
     <!-- FastClick -->
     <script src="../../plugins/fastclick/fastclick.min.js"></script>
-    <!-- AdminLTE App -->
+    <!-- LSIO-UI App -->
     <script src="../../dist/js/app.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
+    <!-- LSIO-UI for demo purposes -->
     <script src="../../dist/js/demo.js"></script>
     <!-- Page script -->
     <script>
